--- a/demo/styles/nesting.css
+++ b/demo/styles/nesting.css
@@ -1,22 +1,22 @@
 .phone {
     &_title {
-        width: 500px;
-        @media (max-width: 500px) {
-            width: auto;
-        }
-        body.is_dark & {
-            color: white;
-        }
+      width: 500px;
+      @media (max-width: 500px) {
+        width: auto;
+      }
+      body.is_dark & {
+        color: white;
+      }
     }
     img {
-        display: block;
+      display: block;
     }
-}
-
-.title {
-  font-size: var(--font);
-
-  @at-root html {
-      --font: 16px
   }
-}
+  
+  .title {
+    font-size: var(--font);
+  
+    @at-root html {
+      --font: 16px;
+    }
+  }
